Revert "S28 3158: Report Update - Concurrent Recordings (#878)"
This reverts commit 56ac23b84fa12a5eed0392e1d25f1394a48a423d.